# notification_bot

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  TODO.md  config.toml  docker-compose.yml  hosts.txt
src/: main.rs
